--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <div class="bg-red-500">Hi</div>
+    <div class="bg-red-500">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+    </div>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
