--- a/index.html
+++ b/index.html
@@ -6,14 +6,272 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="bg-red-500">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
+    <div class="w-full h-auto bg-[#1e1e27] py-3">
+        <div class="max-w-screen-lg h-auto m-auto flex justify-between">
+            <div class="menu-top text-sm">
+                GIAO HÀNG MIỄN PHÍ TRÊN TOÀN QUỐC KHÍ MUA 5 SẢN PHẨM TRỞ LÊN !
+            </div>
+            <div class="menu-top text-sm">
+                <i class="fa fa-phone mr-2"></i>Hỗ trợ miễn phí: 0352460316
+            </div>
+        </div>
     </div>
-    <div id="app"></div>
+    <div class="w-full h-auto py-5">
+        <div class="max-w-screen-lg h-auto m-auto flex justify-between">
+            <div class="">
+                <img src="./img/logo.png" alt="">
+            </div>
+            <ul class="ul w-auto flex justify-between items-center">
+                <li>
+                    <a href="">TRANG CHỦ</a>
+                </li>
+                <li>
+                    <a href="">SẢN PHẨM</a>
+                </li>
+                <li>
+                    <a href="">BÀI VIẾT</a>
+                </li>
+                <li>
+                    <a href="">LIÊN HỆ</a>
+                </li>
+                <div class="px-5">
+                    <a href=""><i class="fa fa-search" aria-hidden="true"></i></a>
+                </div>
+                <div class="w-10 h-10 bg-[#eceff6] flex justify-center rounded-full items-center relative">
+                    <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+                    <div class="absolute bg-red-500 w-5 h-5 -top-2 right-0 rounded-full flex justify-center items-center">
+                        <a href="" class="text-white text-sm">2</a>
+                    </div>
+                </div>
+            </ul>
+        </div>
+    </div>
+    <div class="banner w-full">
+        <div class="max-w-screen-lg h-96 m-auto flex flex-col">
+            <div class="mt-32">
+                BỘ SƯU TẬP XUÂN / HÈ 2022
+            </div>
+            <div class="text-6xl py-10">
+                GIẢM GIÁ 30%<br> CHO HÀNG MỚI VỀ
+            </div>
+            <div class="w-28 h-10 bg-[#fe4c50] flex justify-center items-center rounded-md text-white">
+                <a href="">MUA NGAY</a>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto">
+        <div class="max-w-screen-lg h-auto m-auto">
+            <div class="w-80 m-auto flex flex-col items-center">
+                <div class="text-3xl font-medium">
+                    SẢN PHẨM
+                </div>
+                <div class="w-28 h-1 bg-red-500 my-5"></div>
+                <div class="w-full flex justify-between my-3">
+                    <div class="w-28 category bg-red-500 h-11 items-center text-white flex justify-center font-medium rounded-sm">
+                        <a href="" class="text-white">TẤT CẢ</a>
+                    </div>
+                    <div class="w-28 category h-11 items-center text-white flex justify-center font-medium rounded-sm">
+                        <a href="" class="text-black">NAM</a>
+                    </div>
+                    <div class="w-28 category h-11 items-center text-white flex justify-center font-medium rounded-sm">
+                        <a href="" class="text-black">NỮ</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto">
+        <div class="max-w-screen-lg m-auto h-automt-5">
+            <div class="flex justify-between flex-wrap mt-4">
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_1.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_2.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_3.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_4.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_5.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_6.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_7.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_8.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto bg-[#f2f2f2] mt-5 mb-8">
+        <div class="max-w-screen-lg m-auto flex justify-between">
+            <div>
+                <img class="h-96 w-96" src="./img/deal_ofthe_week.png" alt="">
+            </div>
+            <div class="h-96 w-auto flex flex-col items-center">
+                <div class="text-4xl font-medium mt-40">
+                    GIAO DỊCH TRONG TUẦN
+                </div>
+                <div class="h-1 w-64 bg-red-500 my-5"></div>
+                <div class="text-center w-36 h-10 rounded-sm font-medium bg-black mt-3 text-white">
+                    <a href="" class="leading-10">MUA NGAY</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto">
+        <div class="max-w-screen-lg m-auto">
+            <div class="w-80 m-auto flex flex-col items-center">
+                <div class="text-3xl font-medium">
+                    BÀI VIẾT
+                </div>
+                <div class="w-28 h-1 bg-red-500 my-5"></div>
+            </div>
+            <div class="w-full h-auto bg-red-500 flex justify-between my-3">
+                <div class="blog w-80 h-80 relative flex justify-center">
+                    <img class="w-full h-full" src="./img/blog_1.jpg" alt="">
+                    <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
+                        <div class="w-60 px-5 font-medium mt-3">
+                            Bật mí 10+ cách phối đồ với áo blazer nam ĐƠN GIẢN mà ĐẸP
+                        </div>
+                        <div class="font-medium mt-3 text-red-500">
+                            <a href="">Đọc Thêm</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img class="w-80 h-80" src="./img/blog_2.jpg" alt="">
+                </div>
+                <div>
+                    <img class="w-80 h-80" src="./img/blog_3.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     <script type="module" src="./src/main.js"></script>
 </body>
 
