--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </div>
                 <div class="w-28 h-1 bg-red-500 my-5"></div>
             </div>
-            <div class="w-full h-auto bg-red-500 flex justify-between my-3">
+            <div class="w-full h-auto flex justify-between my-3">
                 <div class="blog w-80 h-80 relative flex justify-center">
                     <img class="w-full h-full" src="./img/blog_1.jpg" alt="">
                     <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
@@ -263,12 +263,55 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <img class="w-80 h-80" src="./img/blog_2.jpg" alt="">
+                <div class="blog w-80 h-80 relative flex justify-center">
+                    <img class="w-full h-full" src="./img/blog_2.jpg" alt="">
+                    <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
+                        <div class="w-60 px-5 font-medium mt-3">
+                            Bật mí 10+ cách phối đồ với áo blazer nam ĐƠN GIẢN mà ĐẸP
+                        </div>
+                        <div class="font-medium mt-3 text-red-500">
+                            <a href="">Đọc Thêm</a>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img class="w-80 h-80" src="./img/blog_3.jpg" alt="">
+                <div class="blog w-80 h-80 relative flex justify-center">
+                    <img class="w-full h-full" src="./img/blog_3.jpg" alt="">
+                    <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
+                        <div class="w-60 px-5 font-medium mt-3">
+                            Bật mí 10+ cách phối đồ với áo blazer nam ĐƠN GIẢN mà ĐẸP
+                        </div>
+                        <div class="font-medium mt-3 text-red-500">
+                            <a href="">Đọc Thêm</a>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto bg-[#1e1e27] mt-16 pb-12">
+        <div class="max-w-screen-lg m-auto flex justify-between">
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">THỂ LOẠI</h4>
+                <div class="py-3">Nam</div>
+                <div class="py-3">Nữ</div>
+            </div>
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">CỨU GIÚP</h4>
+                <div class="py-3">Theo dõi thứ tự</div>
+                <div class="py-3">Lợi nhuận</div>
+                <div class="py-3">Đang chuyển hàng</div>
+                <div class="py-3">Câu hỏi thường gặp</div>
+            </div>
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">LIÊN LẠC</h4>
+                <div class="py-3 flex flex-wrap">Có câu hỏi nào không? Hãy cho chúng tôi biết tại cửa hàng tại 79 Hai Bà Trưng, Cửa Nam, Hoàn Kiếm, Hà Nội, hoặc gọi cho chúng tôi theo số (+1) 96 716 6879</div>
+            </div>
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">THÔNG TIN</h4>
+                <div class="py-3">Về chúng tôi</div>
+                <div class="py-3">Thông tin giao hàng</div>
+                <div class="py-3">Chính sách bảo mật</div>
+                <div class="py-3">Điều khoản và điều kiện</div>
             </div>
         </div>
     </div>
