--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -51,7 +51,270 @@
             </ul>
         </div>
     </div>
-
+    <div class="banner w-full">
+        <div class="max-w-screen-lg h-96 m-auto flex flex-col">
+            <div class="mt-32">
+                BỘ SƯU TẬP XUÂN / HÈ 2022
+            </div>
+            <div class="text-6xl py-10">
+                GIẢM GIÁ 30%<br> CHO HÀNG MỚI VỀ
+            </div>
+            <div class="w-28 h-10 bg-[#fe4c50] flex justify-center items-center rounded-md text-white">
+                <a href="">MUA NGAY</a>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto">
+        <div class="max-w-screen-lg h-auto m-auto">
+            <div class="w-80 m-auto flex flex-col items-center">
+                <div class="text-3xl font-medium">
+                    SẢN PHẨM
+                </div>
+                <div class="w-28 h-1 bg-red-500 my-5"></div>
+                <div class="w-full flex justify-between my-3">
+                    <div class="w-28 category bg-red-500 h-11 items-center text-white flex justify-center font-medium rounded-sm">
+                        <a href="" class="text-white">TẤT CẢ</a>
+                    </div>
+                    <div class="w-28 category h-11 items-center text-white flex justify-center font-medium rounded-sm">
+                        <a href="" class="text-black">NAM</a>
+                    </div>
+                    <div class="w-28 category h-11 items-center text-white flex justify-center font-medium rounded-sm">
+                        <a href="" class="text-black">NỮ</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto">
+        <div class="max-w-screen-lg m-auto h-automt-5">
+            <div class="flex justify-between flex-wrap mt-4">
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_1.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_2.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_3.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_4.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_5.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_6.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_7.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+                <div class="product w-60 h-auto text-center my-3 relative">
+                    <img src="./img/product_8.png" alt="">
+                    <div class="align-center text-[#1e1e27] font-medium mb-3">
+                        <a href="">Áo khoác bomber chần bông nam</a>
+                    </div>
+                    <div class="flex justify-center pb-2">
+                        <div class="text-red-500 mr-3 font-bold">
+                            1.199.000 ₫
+                        </div>
+                        <div>
+                            <del class="text-[#b9b4c7] font-bold"> 1.599.000 ₫</del>
+                        </div>
+                    </div>
+                    <div class="cart w-full h-10 bottom-0 bg-red-500  hidden absolute">
+                        <a href="" class="font-semibold text-white leading-10">THÊM VÀO GIỎ HÀNG</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto bg-[#f2f2f2] mt-5 mb-8">
+        <div class="max-w-screen-lg m-auto flex justify-between">
+            <div>
+                <img class="h-96 w-96" src="./img/deal_ofthe_week.png" alt="">
+            </div>
+            <div class="h-96 w-auto flex flex-col items-center">
+                <div class="text-4xl font-medium mt-40">
+                    GIAO DỊCH TRONG TUẦN
+                </div>
+                <div class="h-1 w-64 bg-red-500 my-5"></div>
+                <div class="text-center w-36 h-10 rounded-sm font-medium bg-black mt-3 text-white">
+                    <a href="" class="leading-10">MUA NGAY</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto">
+        <div class="max-w-screen-lg m-auto">
+            <div class="w-80 m-auto flex flex-col items-center">
+                <div class="text-3xl font-medium">
+                    BÀI VIẾT
+                </div>
+                <div class="w-28 h-1 bg-red-500 my-5"></div>
+            </div>
+            <div class="w-full h-auto flex justify-between my-3">
+                <div class="blog w-80 h-80 relative flex justify-center">
+                    <img class="w-full h-full" src="./img/blog_1.jpg" alt="">
+                    <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
+                        <div class="w-60 px-5 font-medium mt-3">
+                            Bật mí 10+ cách phối đồ với áo blazer nam ĐƠN GIẢN mà ĐẸP
+                        </div>
+                        <div class="font-medium mt-3 text-red-500">
+                            <a href="">Đọc Thêm</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog w-80 h-80 relative flex justify-center">
+                    <img class="w-full h-full" src="./img/blog_2.jpg" alt="">
+                    <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
+                        <div class="w-60 px-5 font-medium mt-3">
+                            Bật mí 10+ cách phối đồ với áo blazer nam ĐƠN GIẢN mà ĐẸP
+                        </div>
+                        <div class="font-medium mt-3 text-red-500">
+                            <a href="">Đọc Thêm</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog w-80 h-80 relative flex justify-center">
+                    <img class="w-full h-full" src="./img/blog_3.jpg" alt="">
+                    <div class="title-blog bg-white h-36 flex flex-col text-center absolute top-28 rounded-sm hidden">
+                        <div class="w-60 px-5 font-medium mt-3">
+                            Bật mí 10+ cách phối đồ với áo blazer nam ĐƠN GIẢN mà ĐẸP
+                        </div>
+                        <div class="font-medium mt-3 text-red-500">
+                            <a href="">Đọc Thêm</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-full h-auto bg-[#1e1e27] mt-16 pb-12">
+        <div class="max-w-screen-lg m-auto flex justify-between">
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">THỂ LOẠI</h4>
+                <div class="py-3">Nam</div>
+                <div class="py-3">Nữ</div>
+            </div>
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">CỨU GIÚP</h4>
+                <div class="py-3">Theo dõi thứ tự</div>
+                <div class="py-3">Lợi nhuận</div>
+                <div class="py-3">Đang chuyển hàng</div>
+                <div class="py-3">Câu hỏi thường gặp</div>
+            </div>
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">LIÊN LẠC</h4>
+                <div class="py-3 flex flex-wrap">Có câu hỏi nào không? Hãy cho chúng tôi biết tại cửa hàng tại 79 Hai Bà Trưng, Cửa Nam, Hoàn Kiếm, Hà Nội, hoặc gọi cho chúng tôi theo số (+1) 96 716 6879</div>
+            </div>
+            <div class="text-[#b2b2b2] w-60">
+                <h4 class="py-16 font-medium text-white">THÔNG TIN</h4>
+                <div class="py-3">Về chúng tôi</div>
+                <div class="py-3">Thông tin giao hàng</div>
+                <div class="py-3">Chính sách bảo mật</div>
+                <div class="py-3">Điều khoản và điều kiện</div>
+            </div>
+        </div>
+    </div>
     <script type="module" src="./src/main.js"></script>
 </body>
 
