--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
+    <!-- <div class="w-full h-auto">
+        <div class="max-w-screen-lg m-auto h-auto bg-red-500 flex justify-between">
+            <div>
+                haha
+            </div>
+            <div>
+                haha
+            </div>
+        </div>
+    </div> -->
     <div id="app">
 
     </div>
